--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
                         <i class="fab fa-linkedin-in"></i>
                     </a>
                     <a href="#" class="social-link" aria-label="Twitter">
-                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-instagram"></i>
                     </a>
                     <a href="#" class="social-link" aria-label="Email">
                         <i class="fas fa-envelope"></i>
