--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
                     <a href="#" class="social-link" aria-label="Twitter">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a href="#" class="social-link" aria-label="Email">
+                    <a href="subashramasamy88@gmail.com" class="social-link" aria-label="Email">
                         <i class="fas fa-envelope"></i>
                     </a>
                 </div>
