--- a/index.html
+++ b/index.html
@@ -686,13 +686,13 @@
                     <a href="https://github.com/Subash248" target="_blank" class="social-link" aria-label="GitHub">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="https://www.linkedin.com/in/subash88?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="social-link" aria-label="LinkedIn">
+                    <a href="https://www.linkedin.com/in/subash88?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="social-link" aria-label="LinkedIn">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
-                    <a href="https://www.instagram.com/_sector_seven_?utm_source=qr&igsh=bjAwaGczMTdrNzhl" class="social-link" aria-label="Twitter">
+                    <a href="https://www.instagram.com/_sector_seven_?utm_source=qr&igsh=bjAwaGczMTdrNzhl"  target="_blank"class="social-link" aria-label="Twitter">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a href="subashramasamy88@gmail.com" class="social-link" aria-label="Email">
+                    <a href="subashramasamy88@gmail.com" target="_blank" class="social-link" aria-label="Email">
                         <i class="fas fa-envelope"></i>
                     </a>
                 </div>
