--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('images/Background.jpg'); /* Add your hero background image here */
+            background-image: url('images/Background2.jpg'); /* Add your hero background image here */
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -1016,9 +1016,8 @@
         <h2 class="section-title">About Me</h2>
         <div class="about-content">
             <div class="about-text">
-                <p>Hello! I'm Subash, a passionate full stack developer focused on building beautiful and functional web
-                    applications. I love crafting smooth user experiences and solving complex problems with clean,
-                    efficient code.</p>
+                <p>Hello! I'm Subash, Aspiring technology enthusiast with a strong foundation in computer science and a passion for problem solving,
+                    strategic planning skills to contribute to innovative software,passionate learner,budding engineering,creative thinker</p>
                 <br>
                 <p>With expertise in modern web technologies, I create responsive and interactive websites that not only
                     look great but also provide exceptional user experiences. My goal is to bridge the gap between
@@ -1029,7 +1028,7 @@
             </div>
             <div class="about-image">
                 <!-- Add your about section image here -->
-                <img src="images/Background.jpg" alt="About Subash" style="display: none;">
+                <img src="images/Background2.jpg" alt="About Subash" style="display: none;">
                 <!-- Icon placeholder - will be hidden when image is present -->
                 <i class="fas fa-laptop-code icon-placeholder"></i>
             </div>
@@ -1043,12 +1042,10 @@
             <div class="skill-badge">HTML5</div>
             <div class="skill-badge">CSS3</div>
             <div class="skill-badge">JavaScript</div>
-            <div class="skill-badge">React</div>
             <div class="skill-badge">Python</div>
-            <div class="skill-badge">PostgreSQL</div>
-            <div class="skill-badge">Git</div>
-            <div class="skill-badge">Docker</div>
+            <div class="skill-badge">Java</div>
             <div class="skill-badge">AWS</div>
+            <div class="skill-badge">MySQL</div>
         </div>
     </section>
 
@@ -1068,25 +1065,22 @@
                 </div>
             </div>
             <div class="project-card">
-                <h3 class="project-title">Task Manager App</h3>
-                <p>A full-stack task manager application with user authentication, CRUD operations, and a sleek
-                    interface built with modern technologies.</p>
+                <h3 class="project-title">Plant Disease Detection Using ML&EfficientNet</h3>
+                <p>Build d Machine Learning Model Using EfficientNet to Identify Plant Disease From Leaf Image,Enabling Early Detection And Prevention of Crop Loss</p>
                 <div class="project-tech">
-                    <span class="tech-tag">React</span>
-                    <span class="tech-tag">Node.js</span>
-                    <span class="tech-tag">MongoDB</span>
-                    <span class="tech-tag">Express</span>
+                    <span class="tech-tag">HSV</span>
+                    <span class="tech-tag">CNN</span>
+                    <span class="tech-tag">Efficient Net v2l</span>
                 </div>
             </div>
             <div class="project-card">
-                <h3 class="project-title">E-Commerce Platform</h3>
-                <p>A comprehensive e-commerce solution with payment integration, inventory management, and admin
-                    dashboard.</p>
+                <h3 class="project-title">Identification of Cancer cells in Eye Retina</h3>
+                <p>Develop a Deep Learing Based Model to Detect Cancerous Cells in Retina Scans For Early Diagnosis </p>
                 <div class="project-tech">
-                    <span class="tech-tag">Django</span>
-                    <span class="tech-tag">PostgreSQL</span>
-                    <span class="tech-tag">Stripe API</span>
-                    <span class="tech-tag">AWS</span>
+                    <span class="tech-tag">ANN</span>
+                    <span class="tech-tag">CNN</span>
+                    <span class="tech-tag">Zoning</span>
+                    <span class="tech-tag">BPNN</span>
                 </div>
             </div>
         </div>
